--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
           <p class="total_followers">Total Followers: 23,004</p>
         </div>
         <div class="theme_toggle">
-            <div class="mode">
-              <em class="dark">Dark</em>
-            </div>
-            <div class="theme-switcher-wrapper">
-              <label for="checkbox" class="theme-switcher">
-                  <input type="checkbox" id="checkbox">
-                  <div class="slider round">
-                      <!-- ::before -->
-                  </div>
-              </label>
-    </div>
+          <div class="mode">
+            <em class="dark">Dark</em>
+          </div>
+          <div class="theme-switcher-wrapper">
+            <label for="checkbox" class="theme-switcher">
+              <input type="checkbox" id="checkbox" />
+              <div class="slider round">
+                <!-- ::before -->
+              </div>
+            </label>
+          </div>
         </div>
       </section>
       <section class="followers-grid-element">
         <div class="col col-1-4">
-          <hr class="facebook">
+          <hr class="facebook" />
           <div class="social-media-wrapper">
             <p class="social-media-handle">
               <img src="./images/icon-facebook.svg" alt="" />
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="col col-1-4">
-          <hr class="twitter">
+          <hr class="twitter" />
           <div class="social-media-wrapper">
             <p class="social-media-handle">
               <img src="./images/icon-twitter.svg" alt="" />
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="col col-1-4">
-          <hr class="instagram">
+          <hr class="instagram" />
           <div class="social-media-wrapper">
             <p class="social-media-handle">
               <img src="./images/icon-instagram.svg" alt="" />
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="col col-1-4">
-          <hr class="youtube">
+          <hr class="youtube" />
           <div class="social-media-wrapper">
             <p class="social-media-handle">
               <img src="./images/icon-youtube.svg" alt="" />
@@ -122,138 +122,202 @@
         <div class="overview-card">
           <div class="col-2">
             <div class="overview-wrapper">
-              <div class="page-views"><p>Page Views</p></div>
-              <span class="views-count">87</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-facebook.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-up.svg" alt="" class="indicator" />
-                <span class="percentage">3%</span>
-              </picture>
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Page Views</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-facebook.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">87</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-up.svg" alt="" class="indicator" />
+                    <span class="percentage">3%</span>
+                  </picture>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-2">
+           <div class="overview-wrapper">
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Likes</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-facebook.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">52</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-down.svg" alt="" class="indicator" />
+                    <span class="percentage decrease">2%</span>
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-2">
             <div class="overview-wrapper">
-              <div class="page-views"><p>Likes</p></div>
-              <span class="views-count">52</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-facebook.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-down.svg" alt="" class="indicator" />
-                <span class="percentage decrease">2%</span>
-              </picture>
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Likes</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-instagram.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">5462</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-up.svg" alt="" class="indicator" />
+                    <span class="percentage">2257%</span>
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-2">
             <div class="overview-wrapper">
-              <div class="page-views"><p>Likes</p></div>
-              <span class="views-count">5462</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-instagram.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-up.svg" alt="" class="indicator" />
-                <span class="percentage">2257%</span>
-              </picture>
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Profile Views</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-instagram.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">52K</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-up.svg" alt="" class="indicator" />
+                    <span class="percentage">1375%</span>
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
-         <div class="col-2">
-            <div class="overview-wrapper">
-              <div class="page-views"><p>Profile Views</p></div>
-              <span class="views-count">52k</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-instagram.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-up.svg" alt="" class="indicator" />
-                <span class="percentage">1375%</span>
-              </picture>
+          <div class="col-2">
+           <div class="overview-wrapper">
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Retweet</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-twitter.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">117</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-up.svg" alt="" class="indicator" />
+                    <span class="percentage">303%</span>
+                  </picture>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-2">
+           <div class="overview-wrapper">
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Likes</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-twitter.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">507</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-up.svg" alt="" class="indicator" />
+                    <span class="percentage">553%</span>
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-2">
             <div class="overview-wrapper">
-              <div class="page-views"><p>Retweets</p></div>
-              <span class="views-count">117</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-twitter.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-up.svg" alt="" class="indicator" />
-                <span class="percentage">303%</span>
-              </picture>
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Likes</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-youtube.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">107</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-down.svg" alt="" class="indicator" />
+                    <span class="percentage decrease">19%</span>
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-2">
             <div class="overview-wrapper">
-              <div class="page-views"><p>Likes</p></div>
-              <span class="views-count">507</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-twitter.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-up.svg" alt="" class="indicator" />
-                <span class="percentage">553%</span>
-              </picture>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="overview-wrapper">
-              <div class="page-views"><p>Likes</p></div>
-              <span class="views-count">107</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-youtube.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-down.svg" alt="" class="indicator" />
-                <span class="percentage decrease">19%</span>
-              </picture>
-            </div>
-          </div>
-           <div class="col-2">
-            <div class="overview-wrapper">
-              <div class="page-views"><p>Total Views</p></div>
-              <span class="views-count">1407</span>
-              <picture class="social-media-icon">
-                <img
-                  src="./images/icon-youtube.svg"
-                  alt=""
-                  class="social-media-icon"
-                />
-              </picture>
-              <picture class="percentage-indicator">
-                <img src="./images/icon-down.svg" alt="" class="indicator" />
-                <span class="percentage decrease">12%</span>
-              </picture>
+              <div class="page_like_icon">
+                <div class="content-wrapper">
+                  <div class="page-views"><p>Total Views</p></div>
+                  <picture class="social-media-icon">
+                    <img
+                      src="./images/icon-youtube.svg"
+                      alt=""
+                      class="social-media-icon"
+                    />
+                  </picture>
+                </div>
+              </div>
+              <div class="views_count_indicator">
+                <div class="content-wrapper">
+                  <span class="views-count">1407</span>
+                  <picture class="percentage-indicator">
+                    <img src="./images/icon-down.svg" alt="" class="indicator" />
+                    <span class="percentage decrease">12%</span>
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
         </div>
