--- a/index.html
+++ b/index.html
@@ -23,18 +23,11 @@
           <h1 class="name">Social Media Dashboard</h1>
           <p class="total_followers">Total Followers: 23,004</p>
         </div>
-        <div class="theme_toggle">
-          <div class="mode">
-            <em class="dark">Dark</em>
-          </div>
-          <div class="theme-switcher-wrapper">
-            <label for="checkbox" class="theme-switcher">
-              <input type="checkbox" id="checkbox" />
-              <div class="slider round">
-                <!-- ::before -->
-              </div>
-            </label>
-          </div>
+        <div class = "container">
+          <label>Dark Mode</label>
+          <div class = "switch">
+          
+            </div>
         </div>
       </section>
       <section class="followers-grid-element">
@@ -46,7 +39,7 @@
               <span>@nathanf</span>
             </p>
             <span class="social-media-followers">
-              <p>1987</p>
+              <p class="followers-count">1987</p>
               <span>FOLLOWERS</span>
             </span>
             <p class="social-media-todays-follower-facebook">
@@ -64,7 +57,7 @@
               <span>@nathanf</span>
             </p>
             <span class="social-media-followers">
-              <p>1044</p>
+              <p class="followers-count">1044</p>
               <span>FOLLOWERS</span>
             </span>
             <p class="social-media-todays-follower-twitter">
@@ -82,7 +75,7 @@
               <span> @realnathanf </span>
             </p>
             <span class="social-media-followers">
-              <p>11K</p>
+              <p class="followers-count">11K</p>
               <span>FOLLOWERS</span>
             </span>
             <p class="social-media-todays-follower-instagram">
@@ -100,7 +93,7 @@
               <span>Nathan F.</span>
             </p>
             <span class="social-media-followers">
-              <p>8239</p>
+              <p class="followers-count">8239</p>
               <span>SUBSCRIBERS</span>
             </span>
             <p class="social-media-todays-follower-youtube">
@@ -329,5 +322,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/Habeebopeyemi">Deveeb</a>.
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
